[package]
name = "ClojuRS"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.0", features = ["proptest", "serde"] }
ordered-float = "2.0"
num-bigint = "0.4"
num-traits = "0.2.14"
lazy_static = "1.4.0"